[package]
name = "wannsea_types"
version = "0.1.101"
edition = "2021"
build = "src/build.rs"

[dependencies]
prost = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
num-traits = "0.2"
num-derive = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
prost-build = { version = "*" }
